--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
  <!-- <script src="main.js"></script> -->
  <!-- <script src="obj.js"></script> -->
 <!-- <script src ="massiv.js"></script> -->
-<script src ="concat.js"></script>
+<script src ="interpolizia.js"></script>
 </body>
 
 </html>
